# stellar-mixer-desktop

./: .gitignore  README.md  index.html  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/mixer/: archive.rs  coin_selection.rs  flow.rs  mod.rs
src-tauri/src/proofs/: encrypted_note.rs  mod.rs  note.rs  transfer.rs  withdraw.rs
src-tauri/src/security/: crypto.rs  identity.rs  mod.rs  vault.rs
src-tauri/src/stellar/: account.rs  contract.rs
src-tauri/src/storage/: mod.rs
src/components/: AccountSidebar.tsx  ActionPanel.tsx  ActivityFeed.tsx  ErrorModal.tsx  MixerHeader.tsx  NotesModal.tsx  OperationHistory.tsx  OperationTabs.tsx  ProgressLog.tsx  SetupUnlock.tsx  TransferPanel.tsx  WithdrawPanel.tsx
src/lib/: db.ts  stellarPublic.ts  tauri.ts  types.ts
src/styles/: app.css
