[package]
name = "stellar-mixer-desktop"
version = "0.1.0"
description = "Stellar Mixer Desktop"
authors = ["Sam Vinchester"]
edition = "2021"
rust-version = "1.80"
build = "build.rs"

[lib]
name = "stellar_mixer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bip39 = "2"
rand_chacha = "0.3"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
keyring = "3.6.3"
parity-scale-codec = { version = "3.7", features = ["derive"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.11", features = ["json"] }
risc0-ethereum-contracts = "3.0.1"
risc0-zkvm = { version = "^3.0.5" }
rsa_risc0 = { package = "rsa", git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.9-risczero.0", default-features = false, features = ["std"] }
schnorrkel = "0.11.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.41"
sha2_risc0 = { package = "sha2", git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0", features = ["oid"] }
soroban-client = "0.5.8"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
treepir-client = { git = "https://github.com/stellar-mixer/treepir-client.git", branch = "main" }
ureq = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
